<resources>
    <string name="app_name">tabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_muestra">muestra</string>
    <string name="nombre_transicion_imagen">imagen_compartida</string>
    <string name="precio">Precio</string>
    <string name="descripci_n">Descripción</string>
    <string name="tel_fono">Teléfono</string>
    <string name="guardar">GUARDAR</string>
    <string name="nombre">Nombre</string>
    <string name="todo">TODO</string>

    <string name="title_activity_inicio">inicio</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_registrar">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
