<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nombre"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"

            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/nombre"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_image_black_48dp" />

        <EditText
            android:id="@+id/precio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView"

            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:ems="10"
            android:hint="@string/precio"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/descript"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignEnd="@+id/nombre"
            android:layout_alignLeft="@+id/precio"
            android:layout_alignRight="@+id/nombre"
            android:layout_alignStart="@+id/precio"
            android:layout_below="@+id/precio"
            android:layout_marginTop="18dp"

            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:ems="10"
            android:hint="@string/descripci_n"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/nombre"
            android:layout_alignLeft="@+id/descript"
            android:layout_alignRight="@+id/nombre"
            android:layout_alignStart="@+id/descript"
            android:layout_below="@+id/descript"
            android:layout_marginTop="22dp"

            android:background="@android:drawable/editbox_dropdown_light_frame"

            android:elevation="16dp"
            android:ems="10"
            android:hint="@string/tel_fono"
            android:inputType="number" />


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/phone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background_normal"
            android:text="@string/guardar" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombre"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />
    </RelativeLayout>


</ScrollView>